<resources>
    <string name="app_name">UBC SimPL Lab Head Impact Monitoring App</string>
    <string name="ubc_logo">UBC</string>
    <string name="bt_connect_scan_start">Scan Devices</string>
    <string name="bt_connect_scan_stop">Stop Scanning</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_configurations">Configurations</string>
    <string name="title_datalogdownload">Datalog Download</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_devterminal">Dev Terminal</string>
    <string name="title_dfu">Firmware Update</string>

    <string name="ubc_logo_description">UBC Logo</string>
    <string name="simplab_logo_description">SimpLab Logo</string>
    <string name="device_connect_button">CONNECT</string>

    <!-- LauncherActivity strings -->
    <string name="launcher_activity_actionbar_title">UBC SimpLab</string>

    <!-- Datalog mode configuration strings -->
    <string name="config_screen_actionbar_title">Device Configurations</string>
    <string name="config_screen_datalog_mode_text">Datalog Mode</string>
    <string name="config_screen_start_datalog_btn_text">Start Datalogging</string>
    <string name="config_screen_stop_datalog_btn_text">Stop Datalogging</string>

    <string-array name="string_array_datalog_mode_options">
        <item>Continuous</item>
        <item>Trigger</item>
    </string-array>

    <string-array name="string_array_trigger_on_options">
        <item>Linear Acceleration</item>
        <item>Angular Velocity</item>
    </string-array>

    <string-array name="string_array_trigger_axis_options">
        <item>Resultant</item>
        <item>Per-axis</item>
    </string-array>

    <!-- Datalog Download Fragment strings -->
    <string name="datalog_download_screen_actionbar_title">Datalog Download</string>

    <!-- Developer Terminal Fragment Strings -->
    <string name="dev_terminal_screen_actionbar_title">Developer Terminal</string>
</resources>