<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_configurations"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_configurations" />

    <item
        android:id="@+id/navigation_datalogdownload"
        android:icon="@drawable/ic_download_24dp"
        android:title="@string/title_datalogdownload" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_calendar_24dp"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_devterminal"
        android:icon="@drawable/ic_debug_24dp"
        android:title="@string/title_devterminal" />

    <item
        android:id="@+id/navigation_dfu"
        android:icon="@drawable/ic_update_24dp"
        android:title="@string/title_dfu" />

</menu>