<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_configurations">

    <fragment
        android:id="@+id/navigation_configurations"
        android:name="com.example.ubcsimpllabheadimpactmonitoringapp.screens.configuration.ConfigurationFragment"
        android:label="@string/title_configurations"
        tools:layout="@layout/configuration_fragment" />

    <fragment
        android:id="@+id/navigation_datalogdownload"
        android:name="com.example.ubcsimpllabheadimpactmonitoringapp.screens.datalogdownload.DatalogDownloadFragment"
        android:label="@string/title_datalogdownload"
        tools:layout="@layout/datalog_download_fragment" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.example.ubcsimpllabheadimpactmonitoringapp.screens.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/schedule_fragment" />

    <fragment
        android:id="@+id/navigation_devterminal"
        android:name="com.example.ubcsimpllabheadimpactmonitoringapp.screens.devterminal.DevTerminalFragment"
        android:label="@string/title_devterminal"
        tools:layout="@layout/dev_terminal_fragment" />

    <fragment
        android:id="@+id/navigation_dfu"
        android:name="com.example.ubcsimpllabheadimpactmonitoringapp.screens.dfu.DfuFragment"
        android:label="@string/title_dfu"
        tools:layout="@layout/dfu_fragment" />
</navigation>